--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
         }
         wsString += "/mqtt";
         console.log("wsString: " + wsString);
-        var client = new Paho.Client(wsString, "bpqmonweb");
+
+        function generateRandomString() {
+            const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            let result = '';
+            for (let i = 0; i < 4; i++) {
+                const randomIndex = Math.floor(Math.random() * characters.length);
+                result += characters[randomIndex];
+            }
+            return result;
+        }
+
+        var client = new Paho.Client(wsString, "bpqmonweb" + generateRandomString());
         client.connect({ onSuccess: onConnect, useSSL: useSSL, userName: "bpqmon", password: "bpqmon", reconnect: true });
 
         function onConnect() {
