Log the client name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             return result;
         }
 
-        var client = new Paho.Client(wsString, "bpqmonweb" + generateRandomString());
+        var clientName = "bpqmonweb" + generateRandomString();
+        console.log("clientName: " + clientName);
+        var client = new Paho.Client(wsString, clientName);   
         client.connect({ onSuccess: onConnect, useSSL: useSSL, userName: "bpqmon", password: "bpqmon", reconnect: true });
 
         function onConnect() {
