Add reload every 12 hours to prevent infinite DOM memory leak

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Reload every 12 hours -->
+    <meta http-equiv="refresh" content="43200">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
