But make it the correct spans

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             var colourSpan = document.createElement("span");
             colourSpan.className = "color" + portText;
             colourSpan.innerHTML = "&nbsp";
-            li.appendChild(span);
+            li.appendChild(colourSpan   );
             var timeSpan = document.createElement("span");
             timeSpan.textContent = payload["timestamp"];
             li.appendChild(timeSpan);
