--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             colourSpan.innerHTML = "&nbsp";
             li.appendChild(colourSpan   );
             var timeSpan = document.createElement("span");
-            timeSpan.textContent = payload["timestamp"];
+            timeSpan.textContent = payload["timestamp"] + " ";
             li.appendChild(timeSpan);
             var fromSpan = document.createElement("strong");
             fromSpan.textContent = payload["from"] + " -> " + payload["to"];
