--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             colourSpan.innerHTML = "&nbsp";
             li.appendChild(colourSpan   );
             var timeSpan = document.createElement("span");
-            timestamp.className = "color" + portText;
+            timeSpan    .className = "color" + portText;
             timeSpan.textContent = payload["timestamp"] + " ";
             li.appendChild(timeSpan);
             var fromSpan = document.createElement("strong");
